# esp32-ecc608-dht22-lcd1602

./: .gitignore  CMakeLists.txt  README.md
components/cryptoauthlib/: CMakeCache.txt  CMakeLists.txt  component.mk
components/cryptoauthlib/lib/: atca_iface.h
components/cryptoauthlib/lib/atcacert/: atcacert.h
components/cryptoauthlib/lib/hal/: hal_esp32_i2c.c
components/lcd1602/: CMakeLists.txt
components/lcd1602/include/: Arduino.h  Esp.h
components/lcd1602/src/: DHT22.cpp  LiquidCrystal.cpp
main/: CMakeLists.txt  LiquidCrystal.h  WString.h  crypto_settings.h  esp32-hal-gpio.c  fontx.h  ili9340.h  main.cpp
